--- a/src/components/component.css
+++ b/src/components/component.css
@@ -5,23 +5,29 @@
   font-weight: 400;
   src: url('../Pacifico-Regular.ttf'); /* IE9 Compat Modes */
 }
-.clean{width:100%; display: block; height:0px; clear:both; float:none;content: ""}
-.how_to{font-size: 14px; font-style: italic; text-decoration: underline;}
-.textbox .bottomtext{text-align:left;font-style:italic; font-size:16px; width:100%; margin-top: 50px;padding-bottom: 40px; }
+
+.textbox .bottomtext{text-align:left;font-style:italic; font-size:14px; width:100%; margin-top: 50px;padding-bottom: 40px; }
 .textbox{text-align: left; padding-left:52px;padding-top: 30px;float: left; width: 100%;}
-.textbox p{font-size:20px; margin-bottom: 0px;}
+.textbox p{font-size:18px; margin-bottom: 0px;}
 .textbox .searchbar{width: 400px; margin-top: 20px; }
-.textbox .ant-btn-primary{background-color: #DB155B; border-color: #DB155B;}
+.textbox .ant-btn-primary{background-color: rgb(252, 92, 15); border-color:rgb(252, 92, 15)}
+
+.desktop .ant-btn-primary:hover, .ant-btn-primary:focus{
+      background-color: rgb(232, 75, 10);
+    border-color: rgb(252, 92, 15);
+}
+.ant-card-bordered{border:none !important;}
 .textbox .ant-input-group .ant-input{background: #eee}
-.innerwrapper{position: relative; z-index: 10; padding-bottom: 60px;}
-.backimg{position: absolute;right:0px; bottom:0px; z-index: 3; bottom:30px; }
-.backimg img{ width:500px }
-.questitle{font-size: 20px; font-weight: bold; color:#DB155B;margin-bottom: 0px;}
+.backimg{position: absolute;    right: 40px;
+    bottom: 50px;}
+.questitle{font-size: 20px; font-weight: bold; color:#0fb6fc;margin-bottom: 0px;}
 .opt {width: 60%;}
 .opt span{font-size:16px;}
 .feedwrapper{padding-left: 52px; margin-bottom: 30px;}
-.feedbox .mybtn{background-color: #DB155B; font-size:18px; height: 40px; width: 200px}
+.feedbox .mybtn{background-color: rgb(252, 92, 15); font-size:18px; height: 40px; width: 200px}
 .mybtn span{line-height: 40px;}
+.mydefaultbtn{line-height: 40px;font-size:18px !important; margin-left: 10px;height: 40px !important; width: 140px}
+.mydefaultbtn span{line-height: 40px;color:#666}
 .contentbox{ margin-bottom: 30px; }
 .feedbox{padding-top: 30px; padding-bottom: 40px;}
 .feedbox .ant-radio-wrapper{    border-radius: 5px;
@@ -32,28 +38,49 @@
 .reviewCardStyle{font-size:16px; width: 700px; margin-bottom: 0px;}
 .feedbox .ant-radio-wrapper span{font-size:16px;}
 .feedbox .myinput{width: 400px;margin-bottom: 20px;}
+
+.frozeninput .ant-input{ border:none; background: transparent;width: 400px; color:#333;}
 .anticon-star svg{width: 1.5em; height:1.5em;}
 .contentbox .ant-upload{}
-.thankyou{padding-top:40px; padding-bottom: 190px;}
-.thankyou p{font-size: 28px; line-height:60px;margin:0px !important;color:green; font-weight: bold; font-style: italic;}
-.contentbox .ant-upload-list{margin-bottom: 20px; width: 300px}
+.thankyou p{font-family: 'Pacifico', cursive; font-size: 26px; line-height:40px;margin:0px !important;color:#333;}
+.contentbox .ant-upload-list{width: 300px}
+
+.thankyou .anticon-star{margin-top: 0px !important;}
 .feedbox .mytextarea{font-size:18px; width: 700px; height: 100px;}
 
-
+.labela{float:left;margin-right:10px;}
+.orderside{font-size: 16px;
+    color: #fff;
+    line-height: 30px;
+    padding-top: 20px;
+    float: right;
+    margin-right: 30px;}
+.image_list{ padding:0px;}
+.image_unit{object-fit: cover; width:120px; height:120px; margin-right:10px;}
+.thankyou .anticon-delete{display: none !important;}
+.resultblock{padding-left:0px;margin-top:20px;}
+.resultblock .anticon-star svg{width: 1em}
+.resultblock .ant-rate-star:not(:last-child){margin-right: 3px;}
+.resultblock>li{list-style: none; padding-left: 10px;width: 360px;}
+.resultblock>li{border-bottom: solid 1px #eee}
+.resultblock p{font-family: Arial; font-size: 16px; color:#666; line-height: 30px;}
+.resultblock label{font-size: 16px;line-height: 30px;font-weight: bold}
 @media screen and (max-width: 768px) {
-.textbox{padding-left:0px;}
-.backimg{display: none;}
+.textbox{padding-left:0px;padding-bottom: 260px;}
+
+.backimg{display: none !important;}
+.textbox .backimg{display: block !important;}
 .opt {width: 100%;}
+.orderside{float: left; color:#666; margin-left: 23px;display: none;}
+
 .feedbox .myinput{width: 100%;}
 #reviewb{padding-left:0px; padding-right: 0px;}
 .reviewCardStyle{width: 100%}
 .feedwrapper{padding-left:0px;}
-.toptitle h1{padding-left: 22px;}
+.toptitle h1{padding-left: 22px;float:left;display: block;}
 .feedbox .mybtn{width: 100%;}
+.mydefaultbtn{width: 100%; margin-left: 0px; margin-top: 20px}
 .textbox .searchbar{width: 100%; margin-top: 20px; }
 .forthanking{display: block}
-.thankyou{padding-bottom: 270px; padding-top:10px;}
-.thankyou p{line-height: 40px;}
-.feedboxb{padding-top:0px; padding-bottom: 10px;}
-}
-
+.thankyou{padding-bottom: 20px; padding-top:0px;}
+.feedboxb{padding-top:0px; padding-bottom: 10px;}}
