--- a/src/components/component.css
+++ b/src/components/component.css
@@ -25,6 +25,8 @@
 .opt span{font-size:16px;}
 .feedwrapper{padding-left: 52px; margin-bottom: 30px;}
 .feedbox .mybtn{background-color: rgb(252, 92, 15); font-size:18px; height: 40px; width: 200px}
+.feedbox .mybtna{background-color: rgb(252, 92, 15); font-size:16px; height: 40px; width: 300px;}
+.feedbox .mybtna span{line-height: 40px;}
 .mybtn span{line-height: 40px;}
 .mydefaultbtn{line-height: 40px;font-size:18px !important; margin-left: 10px;height: 40px !important; width: 140px}
 .mydefaultbtn span{line-height: 40px;color:#666}
