--- a/src/getReview/GetReview.css
+++ b/src/getReview/GetReview.css
@@ -10,7 +10,7 @@
 
 
 .desktop {
-  width: 900px;
+  width: 1024px;
   margin: 0 auto;
   background: #fff;
   border-radius: 10px; overflow: hidden;
@@ -25,17 +25,20 @@
 .ant-tabs-nav{width: 100%;}
 
 .ant-tabs-ink-bar{height:3px; background: rgb(252, 92, 15)}
-.toptitle{width:100%; height:70px; background: rgb(252, 92, 15); margin-bottom: 30px;}
+.toptitle{width:100%; height:70px; margin-bottom: 30px;}
 
 .toptitle h1{color:#fff; font-weight: bold; line-height: 70px; text-transform: uppercase; padding-left: 52px;font-size: 24px; float:left;letter-spacing: 1px;}
 
 .tablist{ width: calc( 100% - 120px ); overflow: hidden; margin-left:60px; }
-.tabunit{width:calc( 33.3% - 24px );float: left; margin-left:12px; margin-right:12px; border-bottom: solid 3px #ccc;}
+.tabunit{width:calc( 25% - 24px );float: left; margin-left:12px; margin-right:12px; border-bottom: solid 3px #ccc;}
 .tabunit p{font-size:18px; font-weight: bold;; color:#ccc; text-transform: uppercase;}
 .activeTab{border-bottom: solid 3px rgb(252, 92, 15);}
 .activeTab p{color:rgb(252, 92, 15);}
 .feedwrapper{text-align: left;}
 .clear{ width: 100%; height: 0px; display: block;clear: both;float: none;content:''}
+
+.reviewCardStyle1{width: 100%; font-size:15px;}
+
 @media screen and (max-width: 768px) {
   ant-card-type-inner .ant-card-body {
       padding: 16px 24px;
