--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,4 +1,6 @@
 
+
+
 @font-face {
   font-family: 'Pacifico';
   font-style: normal;
@@ -6,7 +8,7 @@
   src: url('../Pacifico-Regular.ttf'); /* IE9 Compat Modes */
 }
 
-.textbox .bottomtext{text-align:left;font-style:italic; font-size:14px; width:100%; margin-top: 50px;padding-bottom: 40px; }
+.textbox .bottomtext{text-align:left;font-style:italic; font-size:14px; width:100%; margin-top: 50px;padding-bottom: 40px; z-index: 10; position: relative;}
 .textbox{text-align: left; padding-left:52px;padding-top: 30px;float: left; width: 100%;}
 .textbox p{font-size:18px; margin-bottom: 0px;}
 .textbox .searchbar{width: 400px; margin-top: 20px; }
@@ -18,8 +20,8 @@
 }
 .ant-card-bordered{border:none !important;}
 .textbox .ant-input-group .ant-input{background: #eee}
-.backimg{position: absolute;    right: 40px;
-    bottom: 50px;}
+.backimg{position: absolute;    right: 140px;
+    bottom: 50px; width: 200px; z-index: 0}
 .questitle{font-size: 20px; font-weight: bold; color:#0fb6fc;margin-bottom: 0px;}
 .opt {width: 60%;}
 .opt span{font-size:16px;}
@@ -67,7 +69,13 @@
 .resultblock>li{border-bottom: solid 1px #eee}
 .resultblock p{font-family: Arial; font-size: 16px; color:#666; line-height: 30px;}
 .resultblock label{font-size: 16px;line-height: 30px;font-weight: bold}
+ .bottomtextb{margin-top:20px;width:400px}
+.screenshotamazon{width: 400px}
+.reviewCardStyle1.special1{width: 400px}
 @media screen and (max-width: 768px) {
+ .bottomtextb{margin-top:20px;width:100%}
+.screenshotamazon{width: 100%}
+.special1{width:100%}
 .textbox{padding-left:0px;padding-bottom: 260px;}
 
 .backimg{display: none !important;}
