--- a/src/index.css
+++ b/src/index.css
@@ -21,15 +21,25 @@ html, body{
 }
 
 .overwapper{background-image: url("./background.jpg");
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items:center;
-  justify-content: center;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  height: 100%; width: 100%;
+  position: fixed;
+  top:0px;left:0px;
+  background-size: cover; z-index: 0;
+
 }
 
+.background{
+position: absolute;
+left: 0px; top:0px; z-index: 10;
+  display: flex; width: 100%; height: 100%;
+  align-items:center;
+  justify-content: center;
+
+}
 .ant-btn-primary:hover, .ant-btn-primary:focus{background: #B7034E;border-color: #B7034E;}
 .ant-btn-primary{border-color:#B7034E;}
 * {
