--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,23 @@
 @import '~antd/dist/antd.css';
 
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 @import Background from './background.jpg';
 html, body{
     /* box-sizing: content-box; */
     width: 100%;
     height: 100%;
-    font-family: 'Source Sans Pro', sans-serif;
+    /*font-family: 'Source Sans Pro', sans-serif;*/
+    font-family: 'Montserrat', sans-serif;
+}
+body {
+  background: hsl(227, 71%, 91%);
 }
 #root{
     /* box-sizing: content-box; */
     width: 100%;
-    height: 100%
+    height: 100%;
 }
 
 ::-webkit-scrollbar{
@@ -20,15 +25,18 @@ html, body{
     height: 5px;/* 横向滚动条 */
 }
 
-.overwapper{background-image: url("./background.jpg");
+.overwapper{
+  background: url("./bg.svg") 0 0 repeat;
 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  -webkit-background-size: 323px 320px;
+  -moz-background-size: 323px 320px;
+  -o-background-size: 323px 320px;
   height: 100%; width: 100%;
   position: fixed;
   top:0px;left:0px;
-  background-size: cover; z-index: 0;
+  background-size: 323px 320px;
+  z-index: 0;
+  opacity: 0.3;
 
 }
 
@@ -42,6 +50,4 @@ left: 0px; top:0px; z-index: 10;
 }
 .ant-btn-primary:hover, .ant-btn-primary:focus{background: #B7034E;border-color: #B7034E;}
 .ant-btn-primary{border-color:#B7034E;}
-* {
-  font-family: 'Maven Pro', sans-serif;
-}
+/* * {font-family: 'Maven Pro', sans-serif; }*/
