--- a/src/getReview/GetReview.css
+++ b/src/getReview/GetReview.css
@@ -25,6 +25,7 @@
 }
 
 .logoline {
+  padding-top: 20px;
   text-align: center;
   margin-bottom: 4%;
 }
@@ -78,17 +79,24 @@
 }
 
 .tablist {
-  width: calc(100% - 120px);
-  overflow: hidden;
-  margin-left: 60px;
+  /*width: calc(100% - 120px);*/
+  /*overflow: hidden;*/
+  /*margin-left: 60px;*/
+  white-space: nowrap;
+  text-align: center;
   background: #fff;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
+.tablist::-webkit-scrollbar { display: none; }
 
 .tabunit {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 12px 20px 10px;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 18px;
   font-weight: 600;
   color: #252525;
   background: hsl(0, 0%, 92%);
@@ -164,20 +172,20 @@
     margin-bottom: 30px;
   }
 
-  .tablist {
+  /*.tablist {
     width: calc(100% - 40px);
     margin-left: 20px;
-  }
+  }*/
 
   .toptitle h1 {
     font-size: 20px;
     padding-left: 24px;
   }
 
-  .tabunit {
+/*  .tabunit {
     width: calc(33.3% - 12px);
     margin-left: 6px;
     margin-right: 6px;
   }
-
+*/
 }
