--- a/src/components/component.css
+++ b/src/components/component.css
@@ -1,25 +1,39 @@
-
-
-
 @font-face {
   font-family: 'Pacifico';
   font-style: normal;
   font-weight: 400;
   src: url('../Pacifico-Regular.ttf'); /* IE9 Compat Modes */
 }
-
+img {
+  max-width: 100%;
+  height: auto;
+}
+.h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+.highlight {
+  color: hsl(277, 85%, 63%);
+}
+.center-align { text-align: center; }
 p {
-  line-height: 1.5;
+  line-height: 1.6;
   font-size: 16px;
 }
+p a { text-decoration: underline; }
+.p { margin: 1.6em 0; }
+.p:first-child { margin-top: 0; }
+.p:last-child { margin-bottom: 0; }
 .p-l { font-size: 18px; }
 .quiet { color: #666; }
 .small { font-size: 14px; }
+.x-small { font-size: 12px; }
 .content {
   max-width: 500px;
   margin: 10% auto;
 }
 .row:not(:last-child) { margin-bottom: 8%; }
+.row-lg:not(:last-child) { margin-bottom: 12%; }
 .searchline {
   margin: 12px 0;
   display: -webkit-flex;
@@ -32,7 +46,7 @@ p {
 .searchline .ant-btn { flex: 1 1 auto; }
 .searchline .ant-input {
   width: 70%;
-  flex: 1 1 auto;
+  flex: 3 1 auto;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -46,6 +60,14 @@ p {
   .searchline .ant-input,
   .searchline .ant-btn { width: auto; }
 }
+.form-row { margin-bottom: 15px; }
+.multi-inputs-3 > input,
+.multi-inputs-3 > select {
+  display: inline-block;
+  width: calc(100%/3 - 10px);
+  margin-right: 15px;
+}
+.multi-inputs-3 > :last-child { margin-right: 0; }
 /* reset ant */
 .ant-input,
 .ant-btn {
@@ -63,11 +85,99 @@ p {
   font-weight: bold !important;
   text-transform: uppercase;
   color: #fff !important;
+  border: 0 !important;
   background: hsl(219, 97%, 58%) !important;
 }
-.ant-card {
-  color: #000 !important;
+.ant-btn + .ant-btn { margin-left: 10px; }
+.ant-btn > span, .ant-btn > img {
+  vertical-align: middle;
 }
+.ant-btn > img:last-child {
+  margin-left: 10px;
+}
+.ant-btn-default {
+  color: #000 !important;
+  background: hsl(0, 0%, 92%) !important;
+}
+.anticon-star { margin-top: 0 !important; }
+.anticon-star svg {
+  width: 26px !important;
+  height: 26px !important;
+}
+.ant-rate-star:not(:last-child) { margin-right: 10px !important; }
+.ant-rate-star-first, .ant-rate-star-second { color: hsl(0, 0%, 92%) !important; }
+.ant-rate-star-full .ant-rate-star-first,
+.ant-rate-star-full .ant-rate-star-second { color: hsl(277, 85%, 63%) !important; }
+.btn-next:after {
+  content: url('../right-angle-white.svg');
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
+  margin-left: 15px;
+}
+.btn-round {
+  border-radius: 100px !important;
+  padding-left: 2.67em !important;
+  padding-right: 2.67em !important;
+}
+.btn-highlight { background: hsl(277, 85%, 63%) !important; }
+.ant-card { color: #000 !important; }
+.content .ant-radio-inner,
+.content .ant-checkbox-inner {
+  width: 20px;
+  height: 20px;
+  border-color: hsl(219, 97%, 58%);
+}
+.content .ant-radio-wrapper:hover .ant-radio,
+.content .ant-radio:hover .ant-radio-inner,
+.content .ant-radio-input:focus + .ant-radio-inner,
+.content .ant-checkbox-wrapper:hover .ant-checkbox,
+.content .ant-checkbox:hover .ant-checkbox-inner,
+.content .ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: hsl(219, 97%, 58%);
+}
+.content .ant-radio-wrapper {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+.content .ant-radio-inner:after {
+  width: 12px;
+  height: 12px;
+}
+.content .ant-checkbox-inner:after {
+  width: 6px;
+  height: 11px;
+  top: 45%;
+  left: 27%;
+}
+.content .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #fff;
+}
+.content .ant-checkbox-checked .ant-checkbox-inner::after {
+  border-width: 0 1px 1px 0;
+  border-color: hsl(219, 97%, 58%);
+}
+.content span.ant-radio + *,
+.content span.ant-checkbox + span {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.content .ant-checkbox { float: left; }
+.content span.ant-checkbox + span {
+  display: block;
+  line-height: 1.5;
+  overflow: hidden;
+}
+.content .ant-checkbox-wrapper:last-child .ant-checkbox + span {
+  padding-right: 0;
+}
+.content .ant-radio-wrapper,
+.content .ant-checkbox-wrapper {
+  color: #000;
+  margin-right: 30px;
+}
+.content .ant-radio-wrapper:last-child,
+.content .ant-checkbox-wrapper:last-child { margin-right: 0; }
 
 .textbox .bottomtext{text-align:left;font-style:italic; font-size:14px; width:100%; margin-top: 50px;padding-bottom: 40px; z-index: 10; position: relative;}
 .textbox{text-align: left; padding-left:52px;padding-top: 30px;float: left; width: 100%;}
@@ -80,7 +190,11 @@ p {
     border-color: rgb(252, 92, 15);
 }
 .ant-card-bordered{border:none !important;}
-.textbox .ant-input-group .ant-input{background: #eee}
+
+
+
+
+/*.textbox .ant-input-group .ant-input{background: #eee}
 .backimg{position: absolute;    right: 140px;
     bottom: 50px; width: 200px; z-index: 0}
 .questitle{font-size: 20px; font-weight: bold; color:#0fb6fc;margin-bottom: 0px;}
@@ -113,13 +227,16 @@ p {
 .thankyou .anticon-star{margin-top: 0px !important;}
 .feedbox .mytextarea{font-size:18px; width: 700px; height: 100px;}
 
-.labela{float:left;margin-right:10px;}
+.labela{float:left;margin-right:10px;} */
 .orderside{font-size: 16px;
     color: #fff;
     line-height: 30px;
-    padding-top: 20px;
+    /*padding-top: 25px;
+    line-height: 1;*/
+    line-height: 59px;
     float: right;
     margin-right: 30px;}
+/*
 .image_list{ padding:0px;}
 .image_unit{object-fit: cover; width:120px; height:120px; margin-right:10px;}
 .thankyou .anticon-delete{display: none !important;}
@@ -154,4 +271,4 @@ p {
 .textbox .searchbar{width: 100%; margin-top: 20px; }
 .forthanking{display: block}
 .thankyou{padding-bottom: 20px; padding-top:0px;}
-.feedboxb{padding-top:0px; padding-bottom: 10px;}}
+.feedboxb{padding-top:0px; padding-bottom: 10px;}}*/
