--- a/src/components/component.css
+++ b/src/components/component.css
@@ -13,7 +13,10 @@ img {
   font-weight: bold;
 }
 .highlight {
-  color: hsl(277, 85%, 63%);
+  color: #D02504;
+}
+a.ant-btn {
+  line-height: 48px !important;
 }
 .center-align { text-align: center; }
 p {
@@ -21,6 +24,10 @@ p {
   font-size: 16px;
 }
 p a { text-decoration: underline; }
+a {
+  font-style: italic;
+  color: #4A9DD3;
+}
 .p { margin: 1.6em 0; }
 .p:first-child { margin-top: 0; }
 .p:last-child { margin-bottom: 0; }
@@ -30,7 +37,7 @@ p a { text-decoration: underline; }
 .x-small { font-size: 12px; }
 .content {
   max-width: 500px;
-  margin: 10% auto;
+  margin: 15px auto 10%;
 }
 .row:not(:last-child) { margin-bottom: 8%; }
 .row-lg:not(:last-child) { margin-bottom: 12%; }
@@ -43,22 +50,53 @@ p a { text-decoration: underline; }
   display: flex;
 }
 .searchline .ant-input,
-.searchline .ant-btn { flex: 1 1 auto; }
+.searchline .ant-btn {
+  flex: 1 1 auto;
+  height: 60px !important;
+}
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
+:-moz-placeholder { /* Firefox 18- */
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  font-style: italic;
+}
 .searchline .ant-input {
   width: 70%;
   flex: 3 1 auto;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
 }
 .searchline .ant-btn {
   width: 30%;
   flex: 1 0 auto;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
 }
 @supports (display: flex) {
   .searchline .ant-input,
   .searchline .ant-btn { width: auto; }
+}
+@media screen and (max-width: 499px) {
+  .searchline .ant-btn {
+    background: #D02504 url('../search-white.svg') 50% 50% no-repeat !important;
+  }
+  .searchline .ant-btn span { font-size: 0; }
+}
+@media screen and (min-width: 540px) {
+  .searchline .ant-input {
+    padding-left: 60px !important;
+    background: #fff url('../search.svg') 20px 50% no-repeat;
+  }
 }
 .form-row { margin-bottom: 15px; }
 .multi-inputs-3 > input,
@@ -71,22 +109,22 @@ p a { text-decoration: underline; }
 /* reset ant */
 .ant-input,
 .ant-btn {
-  border-radius: 3px;
+  border-radius: 0 !important;
   padding: 0 15px !important;
   height: 48px !important;
   font-size: 15px !important;
-  border-color: hsl(219, 97%, 58%) !important;
+  border-color: #c3c3c3 !important;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 .ant-btn {
-  padding: 0 25px !important;
+  padding: 0 20px !important;
   font-weight: bold !important;
   text-transform: uppercase;
   color: #fff !important;
   border: 0 !important;
-  background: hsl(219, 97%, 58%) !important;
+  background: #D02504 50% 50% !important;
 }
 .ant-btn + .ant-btn { margin-left: 10px; }
 .ant-btn > span, .ant-btn > img {
@@ -101,32 +139,46 @@ p a { text-decoration: underline; }
 }
 .anticon-star { margin-top: 0 !important; }
 .anticon-star svg {
-  width: 26px !important;
-  height: 26px !important;
+  width: 42px !important;
+  height: 42px !important;
+}
+@media screen and (min-width: 600px) {
+  .anticon-star svg {
+    width: 70px !important;
+    height: 70px !important;
+  }
 }
 .ant-rate-star:not(:last-child) { margin-right: 10px !important; }
 .ant-rate-star-first, .ant-rate-star-second { color: hsl(0, 0%, 92%) !important; }
 .ant-rate-star-full .ant-rate-star-first,
-.ant-rate-star-full .ant-rate-star-second { color: hsl(277, 85%, 63%) !important; }
-.btn-next:after {
-  content: url('../right-angle-white.svg');
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 1;
-  margin-left: 15px;
+.ant-rate-star-full .ant-rate-star-second { color: #FEAA1F !important; }
+.ant-btn-default,
+.btn-next {
+  border-radius: 100px !important;
+  min-width: 138px;
+  color: #ADADAD !important;
+  border: 1px solid !important;
+  font-weight: normal !important;
+  background: #fff !important;
 }
 .btn-round {
   border-radius: 100px !important;
   padding-left: 2.67em !important;
   padding-right: 2.67em !important;
 }
-.btn-highlight { background: hsl(277, 85%, 63%) !important; }
+.btn-highlight { background: #D02504 !important; }
+#reviewb a {
+  font-style: normal;
+  text-decoration: none;
+  color: #D02504;
+  font-weight: bold;
+}
 .ant-card { color: #000 !important; }
 .content .ant-radio-inner,
 .content .ant-checkbox-inner {
   width: 20px;
   height: 20px;
-  border-color: hsl(219, 97%, 58%);
+  border-color: #D02504;
 }
 .content .ant-radio-wrapper:hover .ant-radio,
 .content .ant-radio:hover .ant-radio-inner,
@@ -134,7 +186,7 @@ p a { text-decoration: underline; }
 .content .ant-checkbox-wrapper:hover .ant-checkbox,
 .content .ant-checkbox:hover .ant-checkbox-inner,
 .content .ant-checkbox-input:focus + .ant-checkbox-inner {
-  border-color: hsl(219, 97%, 58%);
+  border-color: #D02504;
 }
 .content .ant-radio-wrapper {
   display: inline-block;
@@ -155,7 +207,15 @@ p a { text-decoration: underline; }
 }
 .content .ant-checkbox-checked .ant-checkbox-inner::after {
   border-width: 0 1px 1px 0;
-  border-color: hsl(219, 97%, 58%);
+  border-color: #D02504;
+}
+.content .ant-radio-checked .ant-radio-inner,
+.content .ant-checkbox-checked:after { border-color: #D02504; }
+.content .ant-radio-inner:after { background-color: #D02504; }
+.content .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.content .ant-checkbox:hover .ant-checkbox-inner,
+.content .ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: #D02504;
 }
 .content span.ant-radio + *,
 .content span.ant-checkbox + span {
