--- a/src/components/component.css
+++ b/src/components/component.css
@@ -88,6 +88,7 @@ p a { text-decoration: underline; }
   border: 0 !important;
   background: hsl(219, 97%, 58%) !important;
 }
+a.ant-btn { line-height: 48px !important; }
 .ant-btn + .ant-btn { margin-left: 10px; }
 .ant-btn > span, .ant-btn > img {
   vertical-align: middle;
@@ -126,6 +127,14 @@ p a { text-decoration: underline; }
 .content .ant-checkbox-inner {
   width: 20px;
   height: 20px;
+  border-color: hsl(219, 97%, 58%);
+}
+.content .ant-radio-checked .ant-radio-inner,
+.content .ant-checkbox-checked:after { border-color: hsl(219, 97%, 58%); }
+.content .ant-radio-inner:after { background-color: hsl(219, 97%, 58%); }
+.content .ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.content .ant-checkbox:hover .ant-checkbox-inner,
+.content .ant-checkbox-input:focus + .ant-checkbox-inner {
   border-color: hsl(219, 97%, 58%);
 }
 .content .ant-radio-wrapper:hover .ant-radio,
