--- a/src/getReview/GetReview.css
+++ b/src/getReview/GetReview.css
@@ -1,8 +1,3 @@
-@import tab_indicator_after from './tab-indicator-after.svg';
-@import tab_indicator_before from './tab-indicator-before.svg';
-@import tab_indicator_default from './tab-indicator-default.svg';
-@import tab_indicator_passed from './tab-indicator-passed.svg';
-
 .cellphone {
   width: 100%;
 
@@ -127,9 +122,10 @@
   color: #fff;
   background: hsl(219, 97%, 58%);
 }
+.activeTab + .tabunit:before { content: url('../tab-indicator-after.svg'); }
+.passedTab + .tabunit:before { content: url('../tab-indicator-passed-after.svg'); }
 .passedTab + .passedTab:before { content: url('../tab-indicator-passed.svg'); }
 .passedTab + .activeTab:before { content: url('../tab-indicator-before.svg'); }
-.activeTab + .tabunit:before { content: url('../tab-indicator-after.svg'); }
 
 /*.activeTab p {
   color: rgb(252, 92, 15);
