--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html, body{
     font-family: 'Montserrat', sans-serif;
 }
 body {
-  background: hsl(227, 71%, 91%);
+  background: #DEA9C8;
 }
 #root{
     /* box-sizing: content-box; */
