--- a/src/components/component.css
+++ b/src/components/component.css
@@ -3,12 +3,20 @@ img {
   height: auto;
 }
 .h2 {
+  color: inherit;
   font-size: 24px;
-  font-weight: bold;
+  line-height: 1.3;
+  font-weight: 600;
 }
 .highlight {
-  color: #D44F7C;
+  color: #FFD45C !important;
 }
+a.highlight {
+  font-style: normal !important;
+  text-decoration: none !important;
+}
+a.highlight:hover { text-decoration: underline !important; }
+.ita { font-style: italic; }
 .center-align { text-align: center; }
 p {
   line-height: 1.6;
@@ -18,6 +26,7 @@ p {
   color: inherit;
   font-style: italic;
 }
+.panel a:hover { color: inherit; }
 p a { text-decoration: underline; }
 .p { margin: 1.6em 0; }
 .p:first-child { margin-top: 0; }
@@ -26,12 +35,40 @@ p a { text-decoration: underline; }
 .quiet { color: #666; }
 .small { font-size: 14px; }
 .x-small { font-size: 12px; }
-.content {
+::-webkit-input-placeholder {
+  font-weight: 600;
+  color: #DEA9C8 !important;
+  letter-spacing: 0.5px;
+  font-style: italic;
+  font-size: 15px;
+}
+::-moz-placeholder {
+  font-weight: 600;
+  color: #DEA9C8 !important;
+  letter-spacing: 0.5px;
+  font-style: italic;
+  font-size: 15px;
+}
+:-ms-input-placeholder {
+  font-weight: 600;
+  color: #DEA9C8 !important;
+  letter-spacing: 0.5px;
+  font-style: italic;
+  font-size: 15px;
+}
+:-moz-placeholder {
+  font-weight: 600;
+  color: #DEA9C8 !important;
+  letter-spacing: 0.5px;
+  font-style: italic;
+  font-size: 15px;
+}
+/*.content {
   max-width: 500px;
   margin: 10% auto;
-}
-.row:not(:last-child) { margin-bottom: 8%; }
-.row-lg:not(:last-child) { margin-bottom: 12%; }
+}*/
+.row:not(:last-child) { margin-bottom: 20px; }
+.row-lg:not(:last-child) { margin-bottom: 45px; }
 .searchline {
   margin: 12px 0;
   display: -webkit-flex;
@@ -64,6 +101,17 @@ p a { text-decoration: underline; }
   .searchline .ant-input,
   .searchline .ant-btn { width: auto; }
 }
+@media screen and (max-width: 499px) {
+  .searchline { position: relative; }
+  .searchline .ant-input { width: 100%; }
+  .searchline .ant-btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 0 !important;
+    background: transparent url(../search.svg) 50% 50% no-repeat !important;
+  }
+}
 .form-row { margin-bottom: 15px; }
 .multi-inputs-3 > input,
 .multi-inputs-3 > select {
@@ -75,23 +123,32 @@ p a { text-decoration: underline; }
 /* reset ant */
 .ant-input,
 .ant-btn {
-  border-radius: 3px;
-  padding: 0 15px !important;
-  height: 48px !important;
+  border-radius: 0 !important;
+  padding: 0 20px !important;
+  height: 60px !important;
   font-size: 15px !important;
-  border-color: #D44F7C !important;
+  font-weight: 600 !important;
+  border: none !important;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.ant-input {
+  color: #D44F7C !important;
+  letter-spacing: 0.5px;
+}
+.ant-input:focus {
+  -webkit-box-shadow: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+a.ant-btn { line-height: 60px !important; }
 .ant-btn {
   padding: 0 25px !important;
-  font-weight: bold !important;
   color: #fff !important;
   border: 0 !important;
-  background: #D44F7C !important;
+  background: #D44F7C 50% 50% no-repeat !important;
 }
-a.ant-btn { line-height: 48px !important; }
 .ant-btn + .ant-btn { margin-left: 10px; }
 .ant-btn > span, .ant-btn > img {
   vertical-align: middle;
@@ -105,26 +162,43 @@ a.ant-btn { line-height: 48px !important; }
 }
 .anticon-star { margin-top: 0 !important; }
 .anticon-star svg {
-  width: 26px !important;
-  height: 26px !important;
+  width: 60px !important;
+  height: 60px !important;
+}
+@media screen and (max-width: 429px) {
+  .anticon-star svg {
+    width: 40px !important;
+    height: 40px !important;
+  }
 }
 .ant-rate-star:not(:last-child) { margin-right: 10px !important; }
 .ant-rate-star-first, .ant-rate-star-second { color: #fff !important; }
 .ant-rate-star-full .ant-rate-star-first,
-.ant-rate-star-full .ant-rate-star-second { color: #D44F7C !important; }
-.btn-next:after {
-  content: url('../right-angle-white.svg');
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 1;
-  margin-left: 15px;
+.ant-rate-star-full .ant-rate-star-second { color: #FFD45C !important; }
+.ant-btn-default,
+.btn-next {
+  color: #fff !important;
+  text-transform: uppercase;
+  font-weight: 600 !important;
+  height: 50px !important;
+  border: 2px solid #fff !important;
+  font-size: 18px !important;
+  letter-spacing: 1px;
+  border-radius: 0 !important;
+  background: none !important;
 }
 .btn-round {
   border-radius: 100px !important;
   padding-left: 2.67em !important;
   padding-right: 2.67em !important;
 }
-.btn-highlight { background: #D44F7C !important; }
+.btn-highlight {
+  background: #D44F7C !important;
+  border-radius: 0 !important;
+  font-size: 18px !important;
+  font-style: normal !important;
+  padding: 0 30px !important;
+}
 .ant-card {
   color: #fff !important;
   background: transparent !important;
@@ -133,15 +207,16 @@ a.ant-btn { line-height: 48px !important; }
 .content .ant-checkbox-inner {
   width: 20px;
   height: 20px;
-  border-color: #D44F7C;
+  border-color: #fff;
+  background: none;
 }
 .content .ant-radio-checked .ant-radio-inner,
-.content .ant-checkbox-checked:after { border-color: #D44F7C; }
-.content .ant-radio-inner:after { background-color: #D44F7C; }
+.content .ant-checkbox-checked:after { border-color: #fff; }
+.content .ant-radio-inner:after { background-color: #fff; }
 .content .ant-checkbox-wrapper:hover .ant-checkbox-inner,
 .content .ant-checkbox:hover .ant-checkbox-inner,
 .content .ant-checkbox-input:focus + .ant-checkbox-inner {
-  border-color: #D44F7C;
+  border-color: #fff;
 }
 .content .ant-radio-wrapper:hover .ant-radio,
 .content .ant-radio:hover .ant-radio-inner,
@@ -149,7 +224,7 @@ a.ant-btn { line-height: 48px !important; }
 .content .ant-checkbox-wrapper:hover .ant-checkbox,
 .content .ant-checkbox:hover .ant-checkbox-inner,
 .content .ant-checkbox-input:focus + .ant-checkbox-inner {
-  border-color: #D44F7C;
+  border-color: #fff;
 }
 .content .ant-radio-wrapper {
   display: inline-block;
@@ -165,12 +240,18 @@ a.ant-btn { line-height: 48px !important; }
   top: 45%;
   left: 27%;
 }
+.content .ant-radio-checked::after { border: 0; }
+.content .ant-radio-input:focus + .ant-radio-inner {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 .content .ant-checkbox-checked .ant-checkbox-inner {
-  background-color: #fff;
+  background: none;
+  border-color: #fff;
 }
 .content .ant-checkbox-checked .ant-checkbox-inner::after {
-  border-width: 0 1px 1px 0;
-  border-color: #D44F7C;
+  border-width: 0 2px 2px 0;
+  border-color: #fff;
 }
 .content span.ant-radio + *,
 .content span.ant-checkbox + span {
@@ -186,10 +267,12 @@ a.ant-btn { line-height: 48px !important; }
 .content .ant-checkbox-wrapper:last-child .ant-checkbox + span {
   padding-right: 0;
 }
+.content .ant-radio-group { color: inherit; }
 .content .ant-radio-wrapper,
 .content .ant-checkbox-wrapper {
-  color: #000;
+  color: inherit;
   margin-right: 30px;
+  font-size: 16px;
 }
 .content .ant-radio-wrapper:last-child,
 .content .ant-checkbox-wrapper:last-child { margin-right: 0; }
