--- a/src/getReview/GetReview.css
+++ b/src/getReview/GetReview.css
@@ -13,7 +13,7 @@
 
 .desktop {
   width: 90%;
-  max-width: 1500;
+  max-width: 960px;
   margin: auto;
   /*background: #fff; */
   /*border-radius: 10px; overflow: hidden;*/
@@ -21,7 +21,7 @@
 }
 
 .logoline {
-  padding: 20px 0 30px;
+  padding: 70px 0 30px;
   text-align: center;
 }
 .logoline img {
@@ -29,11 +29,12 @@
 }
 @media screen and (max-width: 1023px) {
   .logoline {
-    margin-bottom: 50px;
+    padding-bottom: 50px;
   }
 }
 
 .panel {
+  background: #56C5D8;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -46,17 +47,16 @@
 }
 @media screen and (min-width: 1024px) {
   .panel {
-    padding: 3% 5% 10%;
-    padding-right: 38%;
-    border-radius: 7px;
-    overflow: hidden;
-    background: #DEA9C8 url('../bg.jpg') 0 0 no-repeat;
+    padding: 3% 5% 7%;
     -webkit-background-size: cover;
     background-size: cover;
-    -webkit-box-shadow: 0 5px 20px hsla(227, 0%, 0%, 0.4);
-    box-shadow: 0 5px 20px hsla(227, 0%, 0%, 0.4);
   }
 }
+.panel a {
+  color: inherit;
+  font-style: italic;
+}
+.panel a:hover { color: inherit; }
 
 .thankyou {
   margin-top: 30px;
@@ -95,16 +95,7 @@
   font-size: 24px;
   font-weight: 300;
   line-height: 1.2;
-  font-style: italic;
-}
-.toptitle h1 strong {
-  font-weight: bold;
-  font-style: normal;
-}
-@media screen and (max-width: 1023px) {
-  .toptitle h1 {
-    text-align: center;
-  }
+  text-align: center;
 }
 @media screen and (min-width: 600px) {
   .toptitle h1 { font-size: 32px; }
@@ -123,7 +114,8 @@
 .tabunit {
   padding: 19px 10px 17px 18px;
   font-size: 16px;
-  color: #D44F7C;
+  font-weight: 600;
+  color: #56C5D8;
   background: #fff;
 }
 .activeTab {
@@ -131,7 +123,10 @@
   background: #D44F7C;
 }
 @media screen and (max-width: 767px) {
-  .tabunit { padding: 15px 20px 13px; }
+  .tabunit {
+    padding: 15px 20px 13px;
+    border-radius: 15px;
+  }
   .tabunit:not(:last-child) {
     margin-bottom: 10px;
   }
